  . (int), intval() where $base is 10 or unspecified, settype(), decbin(),
    decoct(), dechex(), integer operators and other conversions now always
    respect scientific notation in numeric strings. (Andrea)
  . Implemented the RFC `Catching multiple exception types`. (Bronislaw Bialek,
    Pierrick)
  . Raise a compile-time warning on octal escape sequence overflow. (Sara)

- FTP:
  . Implemented FR #55651 (Option to ignore the returned FTP PASV address).
    (abrender at elitehosts dot com)

- Intl:
  . Added IntlTimeZone::getWindowsID() and
    IntlTimeZone::getIDForWindowsID(). (Sara)

- Hash:
  . Added SHA3 fixed mode algorithms (224, 256, 384, and 512 bit). (Sara)
  . Added SHA512/256 and SHA512/224 algorithms. (Sara)

- JSON:
  . Exported JSON parser API including json_parser_method that can be used
    for implementing custom logic when parsing JSON. (Jakub Zelenka)
  . Escaped U+2028 and U+2029 when JSON_UNESCAPED_UNICODE is supplied as
    json_encode options and added JSON_UNESCAPED_LINE_TERMINATORS to restore
    the previous behaviour. (Eddie Kohler)

- PDO_Firebird:
  . Fixed bug #60052 (Integer returned as a 64bit integer on X86_64). (Mariuz)

- Pgsql:
  . Implemented FR #31021 (pg_last_notice() is needed to get all notice
    messages). (Yasuo)
  . Implemented FR #48532 (Allow pg_fetch_all() to index numerically). (Yasuo)

- Reflection:
  . Fix #72209 (ReflectionProperty::getValue() doesn't fail if object doesn't match type). (Joe)

- Session:
  . Improved fix for bug #68063 (Empty session IDs do still start sessions).
    (Yasuo)
  . Fixed bug #71038 (session_start() returns TRUE on failure).
    Session save handlers must return 'string' always for successful read.
    i.e. Non-existing session read must return empty string. PHP 7.0 is made
    not to tolerate buggy return value. (Yasuo)
  . Fixed bug #71394 (session_regenerate_id() must close opened session on
    errors). (Yasuo)

- SQLite3: