@@ -13,4 +13,4 @@ list($zero, 1 => $one, "foo" => $foo) = $contrivedKeyedAndUnkeyedArrayExample;
 
 ?>
 --EXPECTF--
-Parse error: syntax error, unexpected %s in %s on line %d
+Fatal error: Cannot mix keyed and unkeyed array entries in assignments in %s on line %d
