@@ -32,6 +32,7 @@ PHP                                                                        NEWS
   . Implemented the RFC `Catching multiple exception types`. (Bronislaw Bialek,
     Pierrick)
   . Raise a compile-time warning on octal escape sequence overflow. (Sara)
+  . Added [] = as alternative construct to list() =. (Bob)
 
 - FTP:
   . Implemented FR #55651 (Option to ignore the returned FTP PASV address).
